# shopee-research

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.mavis/plans/: build-frontend.yaml
.wayfinder/: map.md  spec.md
.wayfinder/tickets/: bootstrap-python-project.md  build-single-page-html-js-frontend.md  capture-affiliate-portal-traffic.md  dev-runbook-and-smoke-test.md  implement-cookie-refresh-helper.md  implement-fastapi-http-layer.md  implement-output-templates.md  implement-search-service.md  implement-sqlite-persistence.md  research-map-data-surfaces.md
.zcode/plans/: plan-sess_d1ae0840-4c70-4e58-b4da-e8fe0adc95d7.md
docs/: SPEC.md
docs/research/: affiliate-observed-traffic.json  data-surfaces.md
extension/: background.js  manifest.json
extension/content/: affiliate.js  affiliate_relay.js  cards.css  cards.js  storefront.js  storefront_relay.js
extension/popup/: popup.css  popup.html  popup.js
extension/shared/: inject.js  intercept.js  parse.js
scripts/: capture_affiliate_traffic.py  refresh_cookie.py
src/shopee_th/: __init__.py  config.py  main.py
src/shopee_th/api/: __init__.py  deps.py  routes.py  schemas.py
src/shopee_th/models/: __init__.py  db.py  domain.py  repository.py
src/shopee_th/services/: __init__.py  generation.py  search.py  transport.py
static/: app.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_capture_affiliate_traffic.py  test_e2e.py  test_generation.py  test_health.py  test_refresh_cookie.py  test_repository.py  test_search.py  test_smoke.py  test_ui.py
(+1 files in other folders)
