[project]
name = "shopee-th"
version = "0.1.0"
description = "Local FastAPI web app for Shopee Affiliate Thailand product search + templated caption/clip-prompt generation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Personal" }
authors = [{ name = "Phon" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "playwright>=1.48.0",
    "google-genai>=1.0.0",  # Gemini LLM for caption/clip-prompt generation
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",  # also used by tests
]

[project.scripts]
shopee-th = "shopee_th.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shopee_th"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["scripts"]
markers = [
    "e2e: live end-to-end test against the real Shopee Affiliate TH portal (needs SHOPEE_TH_E2E_COOKIE); see `make e2e`.",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
